--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -34,12 +34,9 @@ blue 	= #0000ff
 green 	= #00ff00
 yellow 	= #ffff00
 
-[bar/myBar]
-;monitor = ${env:MONITOR:HDMI-1}
+[bar/mainBar]
 width = 100%
 height = 27
-;offset-x = 1%
-;offset-y = 1%
 radius = 6.0
 fixed-center = false
 
@@ -62,24 +59,12 @@ font-0 = UbuntuMono-R:style=Regular:size=12;1
 font-1 = unifont:fontformat=truetype:size=10:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
-modules-left = i3 xwindow
+modules-left = i3 cpu temperature memory
 modules-center =
-modules-right = filesystem xbacklight pulseaudio xkeyboard memory cpu wlan eth battery temperature date
+modules-right = xbacklight pulseaudio xkeyboard wlan eth battery date
 
 tray-position = right
 tray-padding = 5
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
 
 cursor-click = pointer
 cursor-scroll = ns-resize
