--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,6 +3,8 @@
 for_window [class="^.*"] border pixel 3
 gaps inner 5
 gaps outer 5
+smart_gaps on
+smart_borders on
 set $term --no-startup-id urxvt
 set $mod Mod4
 
