--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -252,9 +252,11 @@ battery = BAT1
 adapter = ACAD
 full-at = 100
 
-format-charging = <animation-charging> <label-charging> (Charging)
+label-charging = %percentage%%(Charging) %time%
+format-charging = <animation-charging> <label-charging>
 format-charging-underline = #ffb52a
 
+label-discharging = %percentage%% %time%
 format-discharging = <animation-discharging> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
