--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,7 +22,10 @@ exec --no-startup-id $HOME/Scripts/battery_notifications.sh
 
 ## Miscelaneous Bindings ##
 
+for_window [class="URxvt" title="dropdown"] floating enable
 bindsym $mod+Return             exec $term
+bindsym $mod+Shift+Return       exec urxvt -name "dropdown"
+
 bindsym $mod+space              focus mode_toggle
 bindsym $mod+Shift+space        floating toggle
 floating_modifier $mod
