--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,7 +11,7 @@ set $mod Mod4
 ## Autostart ##
 
 exec --no-startup-id feh --bg-scale /$HOME/Images/wallpaper.jpg
-#exec --no-startup-id nm-applet
+exec --no-startup-id nm-applet
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id udiskie -2 &
 exec --no-startup-id lxpolkit
