--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -60,7 +60,7 @@ font-1 = unifont:fontformat=truetype:size=10:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
 modules-left = i3 cpu temperature memory
-modules-center =
+modules-center = cmus
 modules-right = xbacklight pulseaudio xkeyboard wlan eth battery date
 
 tray-position = right
@@ -166,6 +166,16 @@ bar-fill-foreground = #9f78e1
 bar-empty = ─
 bar-empty-font = 2
 bar-empty-foreground = ${colors.foreground-alt}
+
+[module/cmus]
+type = custom/script
+exec = $HOME/.config/polybar/polybar-scripts/player-cmus/player-cmus.sh
+interval = 1
+click-left = cmus-remote --next &
+click-middle = cmus-remote --pause &
+click-right = cmus-remote --prev &
+scroll-up = cmus-remote --volume +10% &
+scroll-down = cmus-remote --volume -10% &
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -284,7 +294,7 @@ animation-discharging-framerate = 750
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
-hwmon-path = /sys/class/hwmon/hwmon0/temp1_input
+hwmon-path = /sys/class/hwmon/hwmon1/temp1_input
 warn-temperature = 60
 
 format = <ramp> <label>
