--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -218,7 +218,7 @@ interval = 1
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #4bffdc
-label = %percentage_used%%
+label = %gb_used%
 
 [module/wlan]
 type = internal/network
