--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -218,7 +218,7 @@ interval = 1
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #4bffdc
-label = %gb_used%
+label = %gb_used% (%percentage_used%%)
 
 [module/wlan]
 type = internal/network
@@ -315,7 +315,7 @@ ramp-foreground = ${colors.red}
 type = internal/date
 interval = 1
 
-date = %a
+date = %a(%d)
 date-alt = " %Y-%m-%d (%a)"
 
 time = %I:%M %p
