--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,20 +11,22 @@ set $mod Mod4
 ## Autostart ##
 
 exec --no-startup-id feh --bg-scale /$HOME/Wallpapers/1.jpg
+exec --no-startup-id picom
 exec --no-startup-id nm-applet
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id udiskie -2 &
 exec --no-startup-id lxpolkit
 exec --no-startup-id dunst
 exec --no-startup-id fcitx -d
+exec --no-startup-id mpd
 exec --no-startup-id $HOME/Scripts/open_email_client.sh
 exec --no-startup-id $HOME/Scripts/battery_notifications.sh
 
 ## Miscelaneous Bindings ##
 
-for_window [class="URxvt" title="dropdown"] floating enable
-bindsym $mod+Return             exec $term
-bindsym $mod+Shift+Return       exec urxvt -name "dropdown"
+for_window [class="Alacritty" title="dropdown"] floating enable
+bindsym $mod+Return             exec alacritty
+bindsym $mod+Shift+Return       exec alacritty --title "dropdown"
 
 bindsym $mod+space              focus mode_toggle
 bindsym $mod+Shift+space        floating toggle
@@ -35,7 +37,7 @@ bindsym $mod+a                  focus parent
 #bindsym $mod+Shift+a
 
 #bindsym $mod+b
-bindsym $mod+Shift+b            exec firefox
+bindsym $mod+Shift+b            exec $BROWSER
 
 #bindsym $mod+c
 #bindsym $mod+Shift+c
@@ -47,7 +49,7 @@ bindsym $mod+e                  layout toggle split
 #bindsym $mod+Shift+e
 
 bindsym $mod+f                  fullscreen toggle
-bindsym $mod+Shift+f            exec nemo
+bindsym $mod+Shift+f            exec $FILEBROWSER
 
 #bindsym $mod+g
 #bindsym $mod+Shift+g
