--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -16,3 +16,7 @@ playlist_directory "~/.config/mpd/playlists"
 #state_file         "~/.config/mpd/state"
 #sticker_file       "~/.config/mpd/sticker.sql"
 
+audio_output {
+        type            "pulse"
+        name            "pulse audio"
+}
