--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -417,7 +417,7 @@ mpd_music_dir = ~/Music
 #
 #clock_display_seconds = no
 #
-#display_volume_level = yes
+display_volume_level = yes
 #
 #display_bitrate = no
 #
