--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -4,6 +4,8 @@ state_file "~/.config/mpd/mpdstate"
 playlist_directory "~/Music/playlists"
 music_directory "~/Music/"
 
+auto_update "yes"
+
 audio_output {
         type    "pulse"
         name    "My Pulse Output"
