Using sxhk for common keybindings

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,7 +30,7 @@ bindsym $mod+a                  focus parent
 #bindsym $mod+Shift+a
 
 #bindsym $mod+b
-bindsym $mod+Shift+b            exec $BROWSER
+#bindsym $mod+Shift+b
 
 #bindsym $mod+c
 #bindsym $mod+Shift+c
@@ -42,7 +42,7 @@ bindsym $mod+e                  layout toggle split
 #bindsym $mod+Shift+e
 
 bindsym $mod+f                  fullscreen toggle
-bindsym $mod+Shift+f            exec $FILE
+#bindsym $mod+Shift+f
 
 #bindsym $mod+g
 #bindsym $mod+Shift+g
@@ -74,7 +74,7 @@ bindsym $mod+Shift+o            exec $HOME/Scripts/i3resize.sh right
 #bindsym $mod+p
 #bindsym $mod+Shift+p
 
-bindsym $mod+q                  exec $HOME/Scripts/rofi_system_menu.sh
+#bindsym $mod+q
 bindsym $mod+Shift+q            kill
 
 #bindsym $mod+r
@@ -140,29 +140,3 @@ bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
-
-## Function Keys ##
-
-## Media Keys ##
-
-bindsym Print                   exec scrot
-
-## XF86 Keys ##
-
-# Volume
-bindsym XF86AudioRaiseVolume    exec pulseaudio-ctl up
-bindsym XF86AudioLowerVolume    exec pulseaudio-ctl down
-bindsym XF86AudioMute           exec pulseaudio-ctl mute
-
-# Brightness
-bindsym XF86MonBrightnessUp     exec xbacklight -inc 10 # increase screen brightness
-bindsym XF86MonBrightnessDown   exec xbacklight -dec 10 # decrease screen brightness
-
-# Touchpad
-#bindsym XF86TouchpadToggle     exec /some/path/toggletouchpad.sh # toggle touchpad
-
-# Media
-bindsym XF86AudioPlay           exec playerctl play
-bindsym XF86AudioPause          exec playerctl pause
-bindsym XF86AudioNext           exec playerctl next
-bindsym XF86AudioPrev           exec playerctl previous
