polybar and dropdown terminal need to start after i3

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,6 +9,9 @@ smart_gaps on
 smart_borders on
 set $mod Mod4
 
+exec $HOME/.config/polybar/launch.sh
+exec $TERMINAL --class "dropdown" &
+
 ## Miscelaneous Bindings ##
 
 # Dropdown terminal
