--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -14,7 +14,7 @@ shadow-exclude = [
 	"class_g = 'Conky'",
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
-	"_GTK_FRAME_EXTENTS@:c"
+	"_GTK_FRAME_EXTENTS@:c",
 ];
 # shadow-exclude = "n:e:Notification";
 # shadow-exclude-reg = "x10+0+0";
@@ -23,7 +23,7 @@ shadow-exclude = [
 # Opacity
 inactive-opacity = 0.8;
 # active-opacity = 0.8;
-frame-opacity = 0.7;
+#frame-opacity = 1;
 inactive-opacity-override = false;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
@@ -35,11 +35,11 @@ blur-kern = "3x3box";
 blur-background-exclude = [
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
-	"_GTK_FRAME_EXTENTS@:c"
+	"_GTK_FRAME_EXTENTS@:c",
 ];
 opacity-rule = [
     "80:class_g = 'URxvt'",
-    "70:class_g = 'XTerm'"
+    "70:class_g = 'XTerm'",
 ];
 
 # Fading
