--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -1,3 +1,6 @@
+ncmpcpp_directory = ~/.config/ncmpcpp
+lyrics_directory = ~/Music/lyrics
+
 # MPD-settings
 mpd_host =                              "localhost"
 mpd_port =                              "6600"
