--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -59,7 +59,7 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = true;
+vsync = false;
 # sw-opti = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
@@ -73,7 +73,7 @@ invert-color-include = [ ];
 # GLX backend
 # glx-no-stencil = true;
 # glx-no-rebind-pixmap = true;
-# xrender-sync-fence = true;
+xrender-sync-fence = true;
 use-damage = true;
 
 # Window type settings
