--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,7 @@ smart_gaps on
 set $mod Mod4
 
 exec $HOME/.config/polybar/launch.sh
-exec $HOME/Scripts/open_email_client.sh
+exec OpenEmailClient
 exec $TERMINAL --class "dropdown" &
 
 ## Miscelaneous Bindings ##
@@ -54,7 +54,7 @@ bindsym $mod+h                  focus left
 bindsym $mod+Shift+h            move left
 
 #bindsym $mod+i
-bindsym $mod+Shift+i            exec $HOME/Scripts/i3resize.sh up
+bindsym $mod+Shift+i            exec i3Resize up
 
 bindsym $mod+j                  focus down
 bindsym $mod+Shift+j            move down
@@ -72,7 +72,7 @@ bindsym $mod+Shift+l            move right
 #bindsym $mod+Shift+n
 
 #bindsym $mod+o
-bindsym $mod+Shift+o            exec $HOME/Scripts/i3resize.sh right
+bindsym $mod+Shift+o            exec i3Resize right
 
 #bindsym $mod+p
 #bindsym $mod+Shift+p
@@ -90,7 +90,7 @@ bindsym $mod+t                  split toggle
 #bindsym $mod+Shift+t
 
 #bindsym $mod+u
-bindsym $mod+Shift+u            exec $HOME/Scripts/i3resize.sh down
+bindsym $mod+Shift+u            exec i3Resize down
 
 #bindsym $mod+v
 #bindsym $mod+Shift+v
@@ -102,7 +102,7 @@ bindsym $mod+w                  layout tabbed
 #bindsym $mod+Shift+x
 
 #bindsym $mod+y
-bindsym $mod+Shift+y            exec $HOME/Scripts/i3resize.sh left
+bindsym $mod+Shift+y            exec i3Resize left
 
 #bindsym $mod+z
 #Cbindsym $mod+Shift+z
