--- a/.config/i3/config
+++ b/.config/i3/config
@@ -23,7 +23,6 @@ for_window [instance="dropdown"] move position center
 for_window [instance="dropdown"] sticky enable
 for_window [instance="dropdown"] move scratchpad
 
-bindsym $mod+Return             exec $TERMINAL
 bindsym $mod+Shift+Return       scratchpad show
 
 bindsym $mod+space              focus mode_toggle
@@ -40,7 +39,7 @@ bindsym $mod+a                  focus parent
 #bindsym $mod+c
 #bindsym $mod+Shift+c
 
-bindsym $mod+d                  exec rofi -show drun
+#bindsym $mod+d
 #bindsym $mod+Shift+d
 
 bindsym $mod+e                  layout toggle split
