--- a/.config/i3/config
+++ b/.config/i3/config
@@ -12,7 +12,7 @@ exec $HOME/.config/polybar/launch.sh
 exec nm-applet
 exec fcitx -d
 exec OpenEmailClient
-exec $TERMINAL --class "dropdown" &
+exec $TERMINAL --class "dropdown"
 
 ## Miscelaneous Bindings ##
 
