--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 export LANG=en_GB.UTF-8
 export EDITOR="nvim"
-export TERMINAL="alacritty"
 export BROWSER="brave"
 export FILE="nemo"
 export READER="zathura"
 export LAUNCHER="dmenu_run"
+
+export NNN_BMS='h:~/;D:~/Downloads/;m:/run/media/gabriel'
+export NNN_COLORS="2136"
