--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,4 +1,4 @@
-# vim:ft=bash
+# vim:ft=i3config
 
 ## Basic Definitions ##
 
@@ -30,85 +30,31 @@ bindsym $mod+Shift+space        floating toggle
 floating_modifier $mod
 
 ## Letter key bindings ##
-bindsym $mod+a                  focus parent
-#bindsym $mod+Shift+a
-
-#bindsym $mod+b
-#bindsym $mod+Shift+b
-
-#bindsym $mod+c
-#bindsym $mod+Shift+c
-
-#bindsym $mod+d
-#bindsym $mod+Shift+d
-
-bindsym $mod+e                  layout toggle split
-#bindsym $mod+Shift+e
-
 bindsym $mod+f                  fullscreen toggle
-#bindsym $mod+Shift+f
 
-#bindsym $mod+g
-#bindsym $mod+Shift+g
-
-bindsym $mod+h                  focus left
-bindsym $mod+Shift+h            move left
-
-#bindsym $mod+i
-bindsym $mod+Shift+i            exec i3Resize up
-
-bindsym $mod+j                  focus down
-bindsym $mod+Shift+j            move down
-
-bindsym $mod+k                  focus up
-bindsym $mod+Shift+k            move up
-
-bindsym $mod+l                  focus right
-bindsym $mod+Shift+l            move right
-
-#bindsym $mod+m
-#bindsym $mod+Shift+m
-
-#bindsym $mod+n
-#bindsym $mod+Shift+n
-
-#bindsym $mod+o
-bindsym $mod+Shift+o            exec i3Resize right
-
-#bindsym $mod+p
-#bindsym $mod+Shift+p
-
-#bindsym $mod+q
 bindsym $mod+Shift+q            [con_id="__focused__" instance="^(?!dropdown).*$"] kill
 
-#bindsym $mod+r
-#bindsym $mod+Shift+r
-
+bindsym $mod+e                  layout toggle split
 bindsym $mod+s                  layout stacking
-#bindsym $mod+Shift+s
-
 bindsym $mod+t                  split toggle
-#bindsym $mod+Shift+t
-
-#bindsym $mod+u
-bindsym $mod+Shift+u            exec i3Resize down
-
-#bindsym $mod+v
-#bindsym $mod+Shift+v
-
 bindsym $mod+w                  layout tabbed
-#bindsym $mod+Shift+w
 
-#bindsym $mod+x
-#bindsym $mod+Shift+x
+bindsym $mod+a                  focus parent
+bindsym $mod+k                  focus up
+bindsym $mod+j                  focus down
+bindsym $mod+l                  focus right
+bindsym $mod+h                  focus left
 
-#bindsym $mod+y
+bindsym $mod+Shift+k            move up
+bindsym $mod+Shift+j            move down
+bindsym $mod+Shift+l            move right
+bindsym $mod+Shift+h            move left
+
+bindsym $mod+Shift+i            exec i3Resize up
+bindsym $mod+Shift+u            exec i3Resize down
+bindsym $mod+Shift+o            exec i3Resize right
 bindsym $mod+Shift+y            exec i3Resize left
 
-#bindsym $mod+z
-#Cbindsym $mod+Shift+z
-
-## Workspace Bindings ##
 
 set $ws1 "1"
 set $ws2 "2"
