--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -3,6 +3,8 @@ h               seek -5
 l               seek 5
 j               add volume -5
 k               add volume 5
+s               cycle sub
+S               cycle sub down
 WHEEL_UP        add volume 5
 WHEEL_DOWN      add volume -5
 WHEEL_LEFT      ignore
