--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
 export LANG=en_GB.UTF-8
 export EDITOR="nvim"
+export VISUAL="nvim"
 export BROWSER="brave"
 export FILE="nemo"
 export READER="zathura"
 export LAUNCHER="dmenu_run"
+
+export HISTCONTROL=ignoreboth
 
 export NNN_BMS='h:~/;D:~/Downloads/;m:/run/media/gabriel'
 export NNN_COLORS="2136"
