- Set theme to One Dark Pro - Hide Timeline from Side Bar

--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -37,4 +37,6 @@
     ],
     "editor.minimap.enabled": false,
     "workbench.iconTheme": "material-icon-theme",
+    "workbench.colorTheme": "One Dark Pro",
+    "timeline.excludeSources": [],
 }
