--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ export LANG=en_GB.UTF-8
 export EDITOR="nvim"
 export VISUAL="nvim"
 export BROWSER="brave"
-export FILE="nemo"
+export FILE="thunar"
 export READER="zathura"
 export LAUNCHER="dmenu_run"
 
