Add default torrent client

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ export BROWSER="brave"
 export FILE="thunar"
 export READER="zathura"
 export LAUNCHER="dmenu_run"
+export TORRENT="qbittorrent"
 
 export HISTCONTROL=ignoreboth
 
