--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,10 +8,14 @@ set $mod Mod4
 
 ## AutoStart ##
 exec $HOME/.config/polybar/launch.sh
-exec OpenEmailClient
+exec OpenApplications
 exec $TERMINAL -n "dropdown"
 
 ## Window Customization ##
+assign [class="Brave-browser"] 1
+assign [class="qBittorrent"] 3
+assign [class="Thunderbird"] 9
+
 for_window [class="^.*"] border pixel 3
 
 for_window [instance="dropdown"] floating enable
