Additional fzf config

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ export HISTCONTROL=ignoreboth
 
 export NNN_BMS='h:~/;D:~/Downloads/;m:/run/media/gabriel'
 export NNN_COLORS="2136"
+
+export FZF_DEFAULT_COMMAND="fd --type f --ignore-file .gitignore"
+export FZF_CTRL_T_COMMAND="$FZF_DEFAULT_COMMAND"
