--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 export LANG=en_GB.UTF-8
 export EDITOR="nvim"
 export VISUAL="nvim"
-export BROWSER="brave"
+export BROWSER="firefox"
 export FILE="thunar"
 export READER="zathura"
 export LAUNCHER="dmenu_run"
