--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -3,5 +3,14 @@
   "diagnostic.warningSign": " ",
   "diagnostic.errorSign": " ",
   "list.indicator": " ",
-  "list.selectedSignText": " "
+  "list.selectedSignText": " ",
+  "clangd.semanticHighlighting":true,
+  // explorer
+  "explorer.width": 30,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.previewAction.onHover": false,
+  "explorer.keyMappings": {
+    "<cr>": ["expandable?", "expand", "open"],
+    "v": "open:vsplit"
+  }
 }
