Don't ask before deleting a file/folder

--- a/.config/Code - OSS/User/settings.json
+++ b/.config/Code - OSS/User/settings.json
@@ -40,4 +40,5 @@
     "workbench.colorTheme": "One Dark Pro",
     "timeline.excludeSources": [],
     "workbench.tree.indent": 30,
+    "explorer.confirmDelete": false,
 }
