--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,6 +14,7 @@ exec $TERMINAL -n "dropdown"
 ## Window Customization ##
 assign [class="Brave-browser"] 1
 assign [class="qBittorrent"] 3
+assign [class="newsboat"] 7
 assign [class="discord"] 8
 assign [class="Thunderbird"] 9
 
