Change clock to 12-hour

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -275,7 +275,7 @@ tail = true
 type = internal/date
 interval = 30
 label =  %time%
-time =  %H:%M %p (%a)
+time =  %I:%M %p (%a)
 time-alt =  %Y-%m-%d (%a)
 
 [module/powermenu]
