--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -48,7 +48,7 @@ blue-gray = #546e7a
 [bar/main]
 monitor =
 width = 100%
-height = 40
+height = 25
 ;offset-x = 5%
 ;offset-y = 2%
 bottom = false
@@ -66,9 +66,9 @@ module-margin-right = 1
 
 ;==========================================================
 
-font-0 = "Fantasque Sans Mono:pixelsize=12"
-font-1 = "Material Icons:size=13"
-font-2 = "Noto Sans CJK JP:style=Regular:size=12"
+font-0 = "Fantasque Sans Mono:pixelsize=10"
+font-1 = "Material Icons:size=9"
+font-2 = "Noto Sans CJK JP:style=Regular:size=9"
 
 ;==========================================================
 
@@ -76,9 +76,6 @@ cursor-click = pointer
 
 tray-position = right
 enable-ipc = true
-
-scroll-up = i3wm-wsnext
-scroll-down = i3wm-wsprev
 
 ;== Module Location ========================================================
 
@@ -176,7 +173,7 @@ label = %output%
 [module/pkg]
 type = custom/script
 exec = $HOME/.config/polybar/scripts/updates.sh
-click-left = st -e sudo pacman -Syu &
+click-left = alacritty -e sudo pacman -Syu &
 tail = true
 
 [module/battery]
