--- a/.config/newsboat/config
+++ b/.config/newsboat/config
@@ -1,9 +1,8 @@
 auto-reload yes
+reload-time 5
 
 bind-key j down
 bind-key k up
-bind-key j next articlelist
-bind-key k prev articlelist
 bind-key J next-feed articlelist
 bind-key K prev-feed articlelist
 bind-key l open
