Last ranger config

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -455,7 +455,9 @@ map gl cd -r .
 map gL cd -r %f
 map go cd /opt
 map gv cd /var
-map gU cd /media/gabriel-extHD/Documents/Study/University/UFG
+map gE cd /mnt/Games/extHD-Backup
+map gU cd /mnt/Games/extHD-Backup/Documents/Study/University/UFG
+map gD cd ~/Downloads
 map gi eval fm.cd('/run/media/' + os.getenv('USER'))
 map gM cd /mnt
 map gs cd /srv
