--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -29,7 +29,7 @@ font:
   bold_italic:
     family: Iosevka
     style: Bold Italic
-  size: 11.0
+  size: 10.0
 
 colors:
   primary:
@@ -72,9 +72,9 @@ key_bindings:
   - { key: V,              mods: Control|Shift, action: Paste            }
   - { key: C,              mods: Control|Shift, action: Copy             }
   - { key: Insert,         mods: Shift,         action: PasteSelection   }
-  - { key: Equals,         mods: Control,       action: ResetFontSize    }
-  - { key: Key0,           mods: Control,       action: IncreaseFontSize }
+  - { key: Equals,         mods: Control,       action: IncreaseFontSize }
   - { key: NumpadSubtract, mods: Control,       action: DecreaseFontSize }
+  - { key: Key0,           mods: Control,       action: ResetFontSize    }
   - { key: PageUp,         mods: Shift,         action: ScrollPageUp     }
   - { key: PageDown,       mods: Shift,         action: ScrollPageDown   }
   - { key: Home,           mods: Shift,         action: ScrollToTop      }
