--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,7 +16,7 @@ assign [class="Chromium"] 1
 assign [class="qBittorrent"] 3
 assign [title="newsboat"] 7
 assign [class="discord"] 8
-assign [class="Thunderbird"] 9
+assign [class="Mailspring"] 9
 
 for_window [class="^.*"] border pixel 3
 
@@ -95,3 +95,4 @@ bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
+
