--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -219,7 +219,7 @@ label = %percentage:2%%
 type = internal/memory
 interval = 1
 format-prefix = " "
-label = %gb_used% (%percentage_used%%)
+label = %percentage_used%%
 
 [module/volume]
 type = internal/alsa
