--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -247,7 +247,7 @@ interval = 1.0
 
 format-connected = <label-connected>
 format-connected-prefix = " "
-label-connected = %essid% D:%downspeed% U:%upspeed%
+label-connected = %essid% [%signal%%] D:%downspeed% U:%upspeed%
 
 format-disconnected =
 
