--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = https://github.com/GPMS/neovim.git
+[submodule "nvim"]
+	path = nvim
+	url = /home/gabriel/.config/nvim
+	branch = master
