--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-icon-theme-name = Breeze-Dark
-gtk-theme-name = Breeze-Dark
+#gtk-icon-theme-name = Breeze-Dark
+#gtk-theme-name = Breeze-Dark
 gtk-font-name = DejaVu Sans 11
 gtk-application-prefer-dark-theme = true
