picom: Fix transparent top of mpv

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -32,7 +32,7 @@ log-file = "~/.cache/picom-log.log";
 
 # inactive-opacity = 0.8;
 # active-opacity = 0.8;
-# frame-opacity = 0.7;
+frame-opacity = 1;
 inactive-opacity-override = false;
 
 opacity-rule = [
