--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -69,6 +69,7 @@ module-margin-right = 1
 font-0 = "Fantasque Sans Mono:pixelsize=10"
 font-1 = "Material Icons:size=9"
 font-2 = "Noto Sans CJK JP:style=Regular:size=9"
+font-3 = "Symbola:style=Regular:size=11"
 
 ;==========================================================
 
@@ -154,19 +155,34 @@ click-right = lxappearance &Q
 ;==========================================================
 
 [module/mpd]
-type = custom/script
-
-exec = ~/.config/polybar/music.sh
-exec-if = pgrep -x mpd
+type = internal/mpd
+host = 127.0.0.1
+port = 6600
 interval = 1
 
-click-left = mpc next
-click-right = mpc prev
-click-middle = mpc toggle
-scroll-up = mpc volume +5
-scroll-down = mpc volume -5
+format-online = <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next> <bar-progress> <label-time>  <label-song>
+label-song = ♪ %artist% - %title%
+label-offline = 🎜 mpd is offline
 
-label = %output%
+icon-play = ⏵
+icon-pause = ⏸
+icon-stop = ⏹
+icon-prev = ⏮
+icon-next = ⏭
+icon-seekb = ⏪
+icon-seekf = ⏩
+icon-random = 🔀
+icon-repeat = 🔁
+icon-single = 🔂
+icon-consume = ✀
+
+toggle-on-foreground = #ff
+toggle-off-foreground = #55
+
+bar-progress-width = 20
+bar-progress-indicator = |
+bar-progress-fill = ─
+bar-progress-empty = ─
 
 ;==========================================================
 
