Fix firefox's class name

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -39,7 +39,7 @@ opacity-rule = [
 	"80:class_g = 'URxvt'",
 	"80:class_g = 'UXTerm'",
 	"80:class_g = 'XTerm'",
-	"100:class_g = 'Firefox'",
+	"100:class_g = 'firefox'",
 	"99:window_type = 'normal'",		# Add a tiny bit of opacity to all normal windows to apply blur
 	"99:window_type = 'dialog'",		# Add a tiny bit of opacity to all dialog windows to apply blur
 	"99:window_type = 'popup_menu'",	# Add a tiny bit of opacity to all popup_menu windows to apply blur
