--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -40,6 +40,8 @@ opacity-rule = [
 	"80:class_g = 'UXTerm'",
 	"80:class_g = 'XTerm'",
 	"100:class_g = 'firefox'",
+	"100:class_g = 'Google-chrome'",
+	"100:class_g = 'Chromium'",
 	"99:window_type = 'normal'",		# Add a tiny bit of opacity to all normal windows to apply blur
 	"99:window_type = 'dialog'",		# Add a tiny bit of opacity to all dialog windows to apply blur
 	"99:window_type = 'popup_menu'",	# Add a tiny bit of opacity to all popup_menu windows to apply blur
