--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,8 @@ exec kitty --title "dropdown"
 assign [class="Chromium"] 1
 assign [class="qBittorrent"] 3
 assign [title="newsboat"] 7
-assign [class="discord"] 8
+assign [class="KeePassXC"] 8
+assign [class="discord"] 9
 
 for_window [class="^.*"] border pixel 3
 
