polybar: Change colors to fit terminal theme

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -13,35 +13,40 @@
 
 [color]
 
-bg = #1F1F1F
-fg = #FFFFFF
-fg-alt = #A9ABB0
+black = #232323
+red = #ff000f
+green = #8ce10b
+yellow = #ffb900
+blue = #008df8
+magenta = 6d43a6
+cyan = #00d8eb
+white = #3f3f3f
 
-acolor = #00897b
-curgent = #e53935
-coccupied = #1e88e5
-
-## Material Colors
-
-red = #e53935
 pink = #d81b60
 purple = #8e24aa
 deep-purple = #5e35b1
 indigo = #3949ab
-blue = #1e88e5
 light-blue = #039be5
-cyan = #00acc1
 teal = #00897b
-green = #43a047
 light-green = #7cb342
 lime = #c0ca33
-yellow = #fdd835
 amber = #ffb300
 orange = #fb8c00
 deep-orange = #f4511e
 brown = #6d4c41
 grey = #757575
 blue-gray = #546e7a
+
+foreground = #fffaf4
+background = #0e1019
+
+bg = ${self.background}
+fg = #686f94
+fg-alt = #A9ABB0
+
+acolor = #00897b
+curgent = #e53935
+coccupied = #1e88e5
 
 ;==========================================================
 
