polybar: Change credits

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -7,7 +7,7 @@
 ;;	/_/    \____/_/\__, /_.___/\__,_/_/
 ;;	              /____/
 ;;
-;; Created By Aditya Shakya @adi1090x
+;; Inspired By Aditya Shakya @adi1090x
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
