polybar: Change bar settings

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -51,13 +51,10 @@ coccupied = #1e88e5
 ;==========================================================
 
 [bar/main]
-monitor =
 width = 100%
-height = 25
-;offset-x = 5%
-;offset-y = 2%
+height = 20
 bottom = false
-fixed-center = false
+fixed-center = true
 line-size = 2
 
 background = ${color.bg}
@@ -65,9 +62,6 @@ foreground = ${color.fg}
 
 border-size = 3
 border-color = ${color.bg}
-
-module-margin-left = 1
-module-margin-right = 1
 
 ;==========================================================
 
