--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -82,8 +82,7 @@ enable-ipc = true
 modules-left = workspaces term files browser mpd
 modules-right = wireless ethernet pkg volume cpu memory battery date powermenu
 
-;== Modules ========================================================
-
+;== Left ========================================================
 
 [module/workspaces]
 type = internal/i3
@@ -112,7 +111,7 @@ label-urgent = %name%
 label-urgent-background = ${color.curgent}
 label-urgent-padding = 2
 
-;==========================================================
+;================
 
 [module/mpd]
 type = internal/mpd
@@ -144,13 +143,32 @@ bar-progress-indicator = |
 bar-progress-fill = ─
 bar-progress-empty = ─
 
-;==========================================================
+;== Middle ========================================================
+
+
+;== Right ========================================================
+
+
+;=============================
+
+
+;=============================
 
 [module/pkg]
 type = custom/script
 exec = $HOME/.config/polybar/scripts/updates.sh
 click-left = alacritty -e sudo pacman -Syu &
 tail = true
+
+;=============================
+
+
+
+;=============================
+
+;=============================
+
+;=============================
 
 [module/battery]
 type = internal/battery
@@ -250,6 +268,7 @@ interval = 30
 label =  %time%
 time =  %I:%M %p (%a)
 time-alt =  %Y-%m-%d (%a)
+;=============================
 
 [module/powermenu]
 type = custom/text
