polybar: Change color and padding of workspaces

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -92,24 +92,25 @@ wrapping-scroll = false
 
 ; focused = Active workspace on focused monitor
 label-focused = %name%
-label-focused-background = ${color.acolor}
-label-focused-underline = ${color.acolor}
-label-focused-padding = 2
+label-focused-foreground = ${color.red}
+label-focused-underline = ${color.blue}
+label-focused-padding = 1
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %name%
-label-unfocused-padding = 2
+label-unfocused-foreground = #333
+label-unfocused-padding = ${self.label-focused-padding}
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %name%
-label-visible-background = ${self.label-focused-background}
+label-visible-foreground = ${self.label-focused-foreground}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %name%
-label-urgent-background = ${color.curgent}
-label-urgent-padding = 2
+label-urgent-foreground = #c54d14
+label-urgent-padding = ${self.label-focused-padding}
 
 ;================
 
