polybar: Open updates with kitty instead of alacritty

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -158,7 +158,7 @@ bar-progress-empty = ─
 [module/pkg]
 type = custom/script
 exec = $HOME/.config/polybar/scripts/updates.sh
-click-left = alacritty -e sudo pacman -Syu &
+click-left = kitty -e sudo pacman -Syu &
 tail = true
 
 ;=============================
