--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -79,14 +79,15 @@ enable-ipc = true
 
 ;== Module Location ========================================================
 
-modules-left = workspaces term files browser mpd
-modules-right = wireless ethernet pkg volume cpu memory battery date powermenu
+modules-left = workspaces mpd
+modules-center = date
+modules-right = wireless ethernet pkg volume cpu memory battery powermenu
 
 ;== Left ========================================================
 
 [module/workspaces]
 type = internal/i3
-format = <label-state>
+format = "[<label-state> | "
 index-sort = true
 wrapping-scroll = false
 
@@ -120,10 +121,6 @@ host = 127.0.0.1
 port = 6600
 interval = 1
 
-format-online = <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next> <bar-progress> <label-time>  <label-song>
-label-song = ♪ %artist% - %title%
-label-offline = 🎜 mpd is offline
-
 icon-play = ⏵
 icon-pause = ⏸
 icon-stop = ⏹
@@ -139,19 +136,64 @@ icon-consume = ✀
 toggle-on-foreground = #ff
 toggle-off-foreground = #55
 
-bar-progress-width = 20
-bar-progress-indicator = |
-bar-progress-fill = ─
-bar-progress-empty = ─
+label-song = ♪ %album-artist% - %album% - %title%
+label-song-foreground = #fff
+format-online = "%{F#fff}<icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next> <label-time> <icon-repeat> <icon-random> <label-song> ]"
+format-stopped = "%{F#fff}<toggle> %{F#686f94}]"
+
+label-offline = "🎜 mpd is offline"
+label-offline-foreground = #fff
+format-offline = " <label-offline> ]"
+
 
 ;== Middle ========================================================
+
+[module/date]
+type = internal/date
+interval = 30
+date-prefix = date
+date = %{F#00d8eb} %{F#ffffff}%d-%m-%y %a
+time = %{F#6d43a6} %{F#ffffff}%H:%M
+label = [ %time% %{F#686f94}| %date% %{F#686f94}]
 
 
 ;== Right ========================================================
 
+[module/wireless]
+type = internal/network
+interface = wlp3s0
+interval = 1.0
+
+format-connected = "[ <ramp-signal><label-connected> | "
+label-connected = %essid% %local_ip%
+label-connected-foreground = #fff
+
+ramp-signal-0 = ""
+ramp-signal-0-foreground = ${color.grey}
+ramp-signal-1 = " "
+ramp-signal-1-foreground = ${color.grey}
+ramp-signal-2 = " "
+ramp-signal-2-foreground = ${color.fg}
+ramp-signal-3 = " "
+ramp-signal-3-foreground = ${color.blue-gray}
+ramp-signal-4 = " "
+ramp-signal-4-foreground = ${color.light-blue}
+ramp-signal-5 = " "
+ramp-signal-5-foreground = ${color.blue}
+
+format-disconnected =
 
 ;=============================
 
+[module/ethernet]
+type = internal/network
+interface = enp2s0
+interval = 1.0
+
+format-connected-underline = #55aa55
+label-connected =  %local_ip%|
+
+format-disconnected =
 
 ;=============================
 
@@ -160,14 +202,53 @@ type = custom/script
 exec = $HOME/.config/polybar/scripts/updates.sh
 click-left = kitty -e sudo pacman -Syu &
 tail = true
+label = %output%
+label-foreground = #fff
+format = "<label> | "
 
 ;=============================
 
+[module/volume]
+type = internal/alsa
 
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
+ramp-volume-4 = 
+ramp-volume-5 = 
+ramp-volume-6 = 
+ramp-volume-foreground = #6d43a6
+
+format-volume = "<ramp-volume> <label-volume> | "
+label-volume = %percentage%%
+label-volume-foreground = #fff
+
+label-muted = MUTE
+label-muted-foreground = #333333
+format-muted = "%{F#714fd6} <label-muted> | "
 
 ;=============================
 
+[module/cpu]
+type = internal/cpu
+interval = 1
+format-prefix = 
+format-prefix-foreground = ${color.cyan}
+label = %percentage:3%%
+label-foreground = #fff
+format = "<label> | "
+
 ;=============================
+
+[module/memory]
+type = internal/memory
+interval = 1
+label = %percentage_used:3%%
+label-foreground = #fff
+format-prefix = 
+format-prefix-foreground = ${color.blue}
+format = "<label> | "
 
 ;=============================
 
@@ -204,79 +285,13 @@ animation-charging-4 = ""
 
 animation-charging-framerate = 750
 
-[module/cpu]
-type = internal/cpu
-interval = 1
-format-prefix = " "
-label = %percentage:2%%
-
-[module/memory]
-type = internal/memory
-interval = 1
-format-prefix = " "
-label = %percentage_used%%
-
-[module/volume]
-type = internal/alsa
-;speaker-mixer = Speaker
-;headphone-mixer = Headphone
-;headphone-id = 16
-;mapped = true
-format-volume = <ramp-volume> <label-volume>
-label-volume = %percentage%%
-format-muted-prefix = " "
-label-muted = MUTE
-
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
-ramp-volume-5 = 
-ramp-volume-6 = 
-
-[module/wireless]
-type = internal/network
-interface = wlp3s0
-interval = 1.0
-
-format-connected = <label-connected>
-format-connected-prefix = " "
-label-connected = %essid% [%signal%%] D:%downspeed% U:%upspeed%
-
-format-disconnected =
-
-[module/ethernet]
-type = internal/network
-interface = enp2s0
-interval = 1.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-label-connected = %local_ip% D:%downspeed:9% U:%upspeed:9%
-
-format-disconnected =
-
-[module/network]
-type = custom/script
-exec = $HOME/.config/polybar/scripts/check-network
-click-left = networkmanager_dmenu &
-tail = true
-
-[module/date]
-type = internal/date
-interval = 30
-label =  %time%
-time =  %I:%M %p (%a)
-time-alt =  %Y-%m-%d (%a)
 ;=============================
 
 [module/powermenu]
 type = custom/text
-content = 
-content-padding = 2
-content-background = ${color.acolor}
-content-foreground = ${color.fg}
+content-prefix = 
+content-prefix-foreground = ${color.red}
+content = " | "
 click-left = $HOME/.config/polybar/scripts/sysmenu
 
 ;== EOF ========================================================
