polybar: Change format of workspaces to match the right-hand side

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -87,7 +87,7 @@ modules-right = wireless ethernet pkg volume cpu memory battery powermenu
 
 [module/workspaces]
 type = internal/i3
-format = "[<label-state> | "
+format = "<label-state> | "
 index-sort = true
 wrapping-scroll = false
 
