Launch polybar after i3 so that the workspaces modules works properlu

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,6 +8,7 @@ set $mod Mod4
 
 ## AutoStart ##
 exec kitty --title "dropdown"
+exec LaunchPolybar.sh
 
 ## Window Customization ##
 assign [class="Chromium"] 1
