--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,11 +2,11 @@
 
 #: Fonts {{{
 
-font_family      Iosevka Regular
-bold_font        Iosevka Bold
-italic_font      Iosevka Italic
-bold_italic_font Iosevka Bold Italic
-font_size 11.0
+font_family      Droid Serif Regular
+bold_font        Droid Serif Bold
+italic_font      Droid Serif Italic
+bold_italic_font Droid Serif Bold
+font_size 12.0
 # force_ltr no
 # adjust_line_height  0
 # adjust_column_width 0
