--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -65,7 +65,7 @@ border-color = ${color.bg}
 
 ;==========================================================
 
-font-0 = "Fantasque Sans Mono:pixelsize=10"
+font-0 = "Droid Sans:style:Regular:pixelsize=10"
 font-1 = "Material Icons:size=9"
 font-2 = "Noto Sans CJK JP:style=Regular:size=9"
 font-3 = "Symbola:style=Regular:size=11"
