polybar: change labels

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -152,7 +152,7 @@ format-offline = " <label-offline> ]"
 type = internal/date
 interval = 30
 date-prefix = date
-date = %{F#00d8eb} %{F#ffffff}%d-%m-%y %a
+date = %{F#00d8eb} %{F#ffffff}%d.%m.%Y (%a)
 time = %{F#6d43a6} %{F#ffffff}%H:%M
 label = [ %time% %{F#686f94}| %date% %{F#686f94}]
 
@@ -165,7 +165,7 @@ interface = wlp3s0
 interval = 1.0
 
 format-connected = "[ <ramp-signal><label-connected> | "
-label-connected = %essid% %local_ip%
+label-connected = %essid% %downspeed:8:8% %upspeed:8:8%
 label-connected-foreground = #fff
 
 ramp-signal-0 = ""
@@ -258,13 +258,13 @@ full-at = 99
 time-format = %H:%M
 battery = BAT1
 adapter = AC
-format-charging = <animation-charging> <label-charging>
+format-charging = "<animation-charging> <label-charging> | "
 ;label-charging = %percentage%% (%time%)
 label-charging = %percentage%%
 format-discharging = <ramp-capacity> <label-discharging>
 ;label-discharging = %percentage%% (%time%)
 label-discharging = %percentage%%
-format-full = <label-full>
+format-full = "<label-full> | "
 
 format-full-prefix = " "
 ramp-capacity-0 = 
