--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -79,7 +79,7 @@ enable-ipc = true
 
 ;== Module Location ========================================================
 
-modules-left = workspaces mpd
+modules-left = workspaces mpd title
 modules-center = date
 modules-right = wireless ethernet pkg volume cpu memory battery powermenu
 
@@ -99,7 +99,7 @@ label-focused-padding = 1
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %name%
-label-unfocused-foreground = #333
+label-unfocused-foreground = #777
 label-unfocused-padding = ${self.label-focused-padding}
 
 ; visible = Active workspace on unfocused monitor
@@ -144,6 +144,13 @@ format-stopped = "%{F#fff}<toggle> %{F#686f94}]"
 label-offline = "🎜 mpd is offline"
 label-offline-foreground = #fff
 format-offline = " <label-offline> ]"
+
+[module/title]
+type = internal/xwindow
+format = <label>
+format-foreground = #fff
+label = " %title%"
+label-maxlen = 50
 
 
 ;== Middle ========================================================
