kitty: Dont confirm when closing

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -103,7 +103,7 @@ window_padding_width 5
 # resize_draw_strategy static
 # resize_in_steps no
 
-# confirm_os_window_close 0
+confirm_os_window_close 0
 
 #: }}}
 
