polybar: Fix wireless interface name

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -168,7 +168,7 @@ label = [ %time% %{F#686f94}| %date% %{F#686f94}]
 
 [module/wireless]
 type = internal/network
-interface = wlp3s0
+interface = wlan0
 interval = 1.0
 
 format-connected = "[ <ramp-signal><label-connected> | "
