polybar: fix volume for pipewire

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -214,26 +214,15 @@ label-foreground = #fff
 format = "<label> | "
 
 ;=============================
-
+;
 [module/volume]
-type = internal/alsa
-
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
-ramp-volume-5 = 
-ramp-volume-6 = 
-ramp-volume-foreground = #6d43a6
-
-format-volume = "<ramp-volume> <label-volume> | "
-label-volume = %percentage%%
-label-volume-foreground = #fff
-
-label-muted = MUTE
-label-muted-foreground = #333333
-format-muted = "%{F#714fd6} <label-muted> | "
+type = custom/script
+exec = $HOME/.config/polybar/scripts/pipewire-simple.sh
+interval = 0.3
+click-right = exec pavucontrol &
+click-left = $HOME/.config/polybar/scripts/pipewire-simple.sh --mute &
+scroll-up = $HOME/.config/polybar/scripts/pipewire-simple.sh --up &
+scroll-down = $HOME/.config/polybar/scripts/pipewire-simple.sh --down &
 
 ;=============================
 
