polybar: Shorten song display label

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -136,7 +136,7 @@ icon-consume = ✀
 toggle-on-foreground = #ff
 toggle-off-foreground = #55
 
-label-song = ♪ %album-artist% - %album% - %title%
+label-song = ♪ %title%
 label-song-foreground = #fff
 format-online = "%{F#fff}<icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next> <label-time> <icon-repeat> <icon-random> <label-song> ]"
 format-stopped = "%{F#fff}<toggle> %{F#686f94}]"
